--- a/ch04-python-intro/Makefile
+++ b/ch04-python-intro/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-intro.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-intro.md -o $(shell basename $(shell pwd)).pdf
