--- a/ch02-unix-exercises/Makefile
+++ b/ch02-unix-exercises/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc unix-exercises.md -F ../../bin/include.hs -o 03-unix-exercises.pdf
+	pandoc unix-exercises.md -o $(shell basename $(shell pwd)).pdf
