--- a/ch03-shell-scripting/Makefile
+++ b/ch03-shell-scripting/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc shell-scripting.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc shell-scripting.md -o $(shell basename $(shell pwd)).pdf
