--- a/ch05-python-strings-lists-tuples/Makefile
+++ b/ch05-python-strings-lists-tuples/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-strings-lists-tuples.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-strings-lists-tuples.md -o $(shell basename $(shell pwd)).pdf
