--- a/ch06-python-dictionaries/Makefile
+++ b/ch06-python-dictionaries/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-dictionaries.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-dictionaries.md -o $(shell basename $(shell pwd)).pdf
