--- a/ch07-python-patterns/Makefile
+++ b/ch07-python-patterns/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-common-patterns.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-common-patterns.md -o $(shell basename $(shell pwd)).pdf
