--- a/ch11-regular-expressions/Makefile
+++ b/ch11-regular-expressions/Makefile
@@ -1,5 +1,5 @@
 pdf: md
-	pandoc re.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc re.md -o $(shell basename $(shell pwd)).pdf
 
 md:
 	jupyter nbconvert --to markdown re.ipynb
