--- a/ch17-writing-tests/Makefile
+++ b/ch17-writing-tests/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc writing-tests.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc writing-tests.md -o $(shell basename $(shell pwd)).pdf
