--- a/ch09-python-games/Makefile
+++ b/ch09-python-games/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-games.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-games.md -o $(shell basename $(shell pwd)).pdf
