--- a/ch10-python-sqlite/Makefile
+++ b/ch10-python-sqlite/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-sqlite.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-sqlite.md -o $(shell basename $(shell pwd)).pdf
