--- a/ch12-python-pipelines/Makefile
+++ b/ch12-python-pipelines/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-pipelines.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-pipelines.md -o $(shell basename $(shell pwd)).pdf
