--- a/ch13-hpc/Makefile
+++ b/ch13-hpc/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc hpc.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc hpc.md -o $(shell basename $(shell pwd)).pdf
