--- a/ch16-logging/Makefile
+++ b/ch16-logging/Makefile
@@ -1,2 +1,2 @@
 pdf:
-	pandoc python-logging.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc python-logging.md -o $(shell basename $(shell pwd)).pdf
