--- a/ch18-functional-ideas/Makefile
+++ b/ch18-functional-ideas/Makefile
@@ -1,5 +1,5 @@
 pdf: md
-	pandoc functional_ideas.md -F ../../bin/include.hs -o $(shell basename $(shell pwd)).pdf
+	pandoc functional_ideas.md -o $(shell basename $(shell pwd)).pdf
 
 md:
 	jupyter nbconvert --to markdown functional_ideas.ipynb
