--- a/ch05-python-strings-lists-tuples/exercises/tictactoe_b/Makefile
+++ b/ch05-python-strings-lists-tuples/exercises/tictactoe_b/Makefile
@@ -1,7 +1,7 @@
-.PHONY: doc test
+.PHONY: pdf test
 
-doc:
+pdf:
 	pandoc README.md -o README.pdf
 
 test:
-	python3 -m pytest -v test.py
+	pytest -v test.py
